--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.8.1
 Django==5.1.1
 django-appconf==1.0.6
 django-compressor==4.5.1
+gunicorn==23.0.0
+packaging==24.1
 pillow==10.4.0
 rcssmin==1.1.2
 rjsmin==1.2.2
