--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-compressor==4.5.1
 gunicorn==23.0.0
 packaging==24.1
 pillow==10.4.0
+psycopg2-binary==2.9.9
 rcssmin==1.1.2
 rjsmin==1.2.2
 sqlparse==0.5.1
