--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
 asgiref==3.8.1
+boto3==1.35.43
+botocore==1.35.43
 Django==5.1.1
 django-appconf==1.0.6
 django-compressor==4.5.1
+django-storages==1.14.4
 gunicorn==23.0.0
+jmespath==1.0.1
 packaging==24.1
 pillow==10.4.0
 psycopg2-binary==2.9.9
+python-dateutil==2.9.0.post0
 rcssmin==1.1.2
 rjsmin==1.2.2
+s3transfer==0.10.3
+six==1.16.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
+urllib3==2.2.3
 whitenoise==6.7.0
