--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.8.1
 boto3==1.35.43
 botocore==1.35.43
+decouple==0.0.7
 Django==5.1.1
 django-appconf==1.0.6
 django-compressor==4.5.1
+django-environ==0.11.2
+django-grappelli==4.0.1
 django-storages==1.14.4
 gunicorn==23.0.0
 jmespath==1.0.1
@@ -11,6 +14,7 @@ packaging==24.1
 pillow==10.4.0
 psycopg2-binary==2.9.9
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 rcssmin==1.1.2
 rjsmin==1.2.2
 s3transfer==0.10.3
